tdf#91138 - hold reference until idle dispose.

Change-Id: Ibfa9a95d27796f8b44dc610db8daa71b968a7988